--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "coffee-script": "1.2.x",
     "express":       "3.0.x",
     "faye":          "0.8.x",
+    "faye-redis":    "0.1.x",
     "jade":          "0.31.x",
     "mqtt":          "0.2.x",
     "nodemon":       "0.7.x",
